leitura .pat eftx_app

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-FLASK_DEBUG = 1
+FLASK_DEBUG=1
+SECRET_KEY="desenvolvimento-local-chave-secreta"
+SQLALCHEMY_DATABASE_URI="sqlite:///instance/users.db"
+GOOGLE_MAPS_API_KEY="AIzaSyCalhWY-kRSFaQToNa5rhOYksC6se8S9t8"
