--- a/requirements.txt
+++ b/requirements.txt
@@ -1,123 +1,84 @@
-affine==2.4.0
-alembic==1.17.0
-argon2-cffi==23.1.0
-argon2-cffi-bindings==25.1.0
-astropy==7.1.1
-astropy-iers-data==0.2025.10.13.0.37.17
-asttokens==3.0.0
-attrs==25.4.0
+attrs==25.1.0
+autocommand==2.2.2
+Automat==24.8.1
+babel==2.17.0
+bcc==0.30.0
+bcrypt==4.2.0
 blinker==1.9.0
-branca==0.8.2
-build==1.3.0
-certifi==2025.10.5
-cffi==2.0.0
-charset-normalizer==3.4.4
-click==8.3.0
-click-plugins==1.1.1.2
-cligj==0.7.2
-contourpy==1.3.3
-coverage==7.11.0
-cryptography==46.0.3
-cycler==0.12.1
-decorator==5.2.1
-docutils==0.22.2
-dotenv==0.9.9
-executing==2.2.1
-extension-helpers==1.4.0
-Flask==3.0.3
-Flask-Cors==4.0.1
-Flask-Login==0.6.3
-Flask-Migrate==4.0.7
-Flask-SQLAlchemy==3.1.1
-folium==0.20.0
-fonttools==4.60.1
-geographiclib==2.1
-geojson==3.1.0
-geopy==2.4.1
-googlemaps==4.10.0
-gunicorn==22.0.0
-hypothesis==6.142.1
-id==1.5.0
-idna==3.11
-iniconfig==2.3.0
-ipdb==0.13.13
-ipython==9.6.0
-ipython_pygments_lexers==1.1.1
-itsdangerous==2.2.0
-jaraco.classes==3.4.0
+boto3==1.37.9
+botocore==1.37.9
+certifi==2025.1.31
+chardet==5.2.0
+click==8.1.8
+cloud-init==25.2
+command-not-found==0.3
+configobj==5.0.9
+constantly==23.10.4
+cryptography==43.0.0
+dbus-python==1.3.2
+distro==1.9.0
+distro-info==1.13
+httplib2==0.22.0
+hyperlink==21.0.0
+idna==3.10
+incremental==24.7.2
+inflect==7.3.1
 jaraco.context==6.0.1
-jaraco.functools==4.3.0
-jedi==0.19.2
-jeepney==0.9.0
-Jinja2==3.1.6
-joblib==1.5.2
-keyring==25.6.0
-kiwisolver==1.4.9
-Mako==1.3.10
-markdown-it-py==4.0.0
-MarkupSafe==3.0.3
-matplotlib==3.10.7
-matplotlib-inline==0.1.7
+jaraco.functools==4.1.0
+jaraco.text==4.0.0
+Jinja2==3.1.5
+jmespath==1.0.1
+jsonpatch==1.32
+jsonpointer==2.4
+jsonschema==4.19.2
+jsonschema-specifications==2023.12.1
+launchpadlib==2.1.0
+lazr.restfulclient==0.14.6
+lazr.uri==1.0.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
 mdurl==0.1.2
-more-itertools==10.8.0
-nh3==0.3.1
-numpy==2.1.3
-packaging==25.0
-pandas==2.3.3
-parso==0.8.5
+more-itertools==10.6.0
+netaddr==1.3.0
+netifaces==0.11.0
+oauthlib==3.2.2
+packaging==24.2
 passlib==1.7.4
 pexpect==4.9.0
-pillow==12.0.0
-pluggy==1.6.0
-prompt_toolkit==3.0.52
-psycopg2-binary==2.9.10
 ptyprocess==0.7.0
-pure_eval==0.2.3
-pycparser==2.23
-pycraf==2.1.0
-pyerfa==2.0.1.5
-Pygments==2.19.2
-pyparsing==3.2.5
-pyproj==3.7.2
-pyproject_hooks==1.2.0
-pytest==8.4.2
-pytest-arraydiff==0.6.1
-pytest-astropy==0.11.0
-pytest-astropy-header==0.2.2
-pytest-cov==7.0.0
-pytest-doctestplus==1.5.0
-pytest-filter-subpackage==0.2.0
-pytest-mock==3.15.1
-pytest-remotedata==0.4.1
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-pytz==2025.2
-PyYAML==6.0.3
-rasterio==1.4.3
-readme_renderer==44.0
-reportlab==4.4.4
-requests==2.32.5
-requests-toolbelt==1.0.0
-rfc3986==2.0.0
-rich==14.2.0
-scikit-learn==1.6.1
-scipy==1.14.1
-SecretStorage==3.4.0
-setuptools==80.9.0
-setuptools-scm==9.2.1
-sgp4==2.25
-shapely==2.0.6
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+Pygments==2.18.0
+PyGObject==3.50.0
+PyHamcrest==2.1.0
+PyJWT==2.10.1
+pyOpenSSL==25.0.0
+pyparsing==3.1.2
+pyserial==3.5
+python-apt==3.0.0
+python-dateutil==2.9.0
+python-debian==1.0.1+ubuntu1
+python-magic==0.4.27
+PyYAML==6.0.2
+referencing==0.35.1
+requests==2.32.3
+rich==13.9.4
+rpds-py==0.21.0
+s3transfer==0.11.2
+service-identity==24.2.0
+setuptools==75.8.0
 six==1.17.0
-sortedcontainers==2.4.0
-SQLAlchemy==2.0.36
-stack-data==0.6.3
-threadpoolctl==3.6.0
-traitlets==5.14.3
-twine==6.2.0
-typing_extensions==4.15.0
-tzdata==2025.2
-urllib3==2.5.0
-wcwidth==0.2.14
-Werkzeug==3.1.3
+sos==4.9.0
+ssh-import-id==5.11
+systemd-python==235
+Twisted==24.11.0
+typeguard==4.4.2
+typing_extensions==4.12.2
+ubuntu-pro-client==8001
+ufw==0.36.2
+unattended-upgrades==0.1
+urllib3==2.3.0
+wadllib==2.0.0
 wheel==0.45.1
-xyzservices==2025.4.0
+zipp==3.21.0
+zope.interface==7.2
